# Wall-A-Software

./: .gitignore  CLAUDE.md  README_TUNING.md  tuneOdom.py
Wall-A-STM/: .cproject  .mxproject  .project  Wall-A-STM.ioc  Wall-A-STM.launch
Wall-A-STM/App/: Config.h  Wall-A_App.cpp
Wall-A-STM/App/Controllers/: Pid.cpp  Pid.h
Wall-A-STM/App/Drivers/: Drv8262.cpp  Drv8262.h  Encoder.cpp  Encoder.h  InternalTemperature.cpp  InternalTemperature.h  MotorCurrentSense.cpp  MotorCurrentSense.h  UartChannel.cpp  UartChannel.h  UsbCdcChannel.cpp  UsbCdcChannel.h
Wall-A-STM/App/Interfaces/: IActuator.h  IActuatorHAL.h  ICommChannel.h  IEncoderHAL.h  IMotorHAL.h  IOdomHAL.h  ISensor.h  ISensorHAL.h
Wall-A-STM/App/Services/: BusFormat.cpp  BusFormat.h  Motor.cpp  Motor.h  Odometry.cpp  Odometry.h
Wall-A-STM/App/SystemInit/: SystemInit.cpp  SystemInit.h
Wall-A-STM/App/Tasks/: ActuatorManager.cpp  ActuatorManager.h  ExternalComm.cpp  ExternalComm.h  Monitoring.cpp  Monitoring.h  MotionPlanner.cpp  MotionPlanner.h  OdoControl.cpp  OdoControl.h  SensorManager.cpp  SensorManager.h  StubActuatorManager.h
Wall-A-STM/Core/Inc/: FreeRTOSConfig.h  main.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h
Wall-A-STM/Core/Src/: freertos.c  main.c  main_cpp.cpp  stm32f4xx_hal_msp.c  stm32f4xx_it.c  sys_getentropy.c
Wall-A-STM/Debug/: Wall-A-STM.list  makefile
Wall-A-STM/Debug/App/: Wall-A_App.cyclo
Wall-A-STM/Debug/Tasks/: CommunicationTask.cyclo  ControlTask.cyclo  MotorTask.cyclo  SensorTask.cyclo
Wall-A-STM/DriversCustom/Motor/: Drv8262.cpp  Drv8262.hpp  README.md
Wall-A-STM/Libs/Utils/: Logger.cpp
Wall-A-STM/Tasks/: CommunicationTask.cpp  CommunicationTask.hpp  ControlTask.cpp  ControlTask.hpp  MotorTask.cpp  MotorTask.hpp  SensorTask.cpp  SensorTask.hpp
Wall-A-STM/Tests/: CMakeLists.txt  run_tests.sh
Wall-A-STM/Tests/Mocks/: MockActuator.h  MockActuatorHAL.h  MockBus.h  MockEncoderHAL.h  MockSensor.h  MockSensorHAL.h
Wall-A-STM/Tests/Stubs/: FreeRTOS.h  FreeRTOSStub.cpp  HalStub.h  StaticDefs.cpp  stm32f4xx_hal.h  task.h  usbd_cdc_if.h
Wall-A-STM/Tests/Unit/: ActuatorDriversTest.cpp  ActuatorManagerTest.cpp  ConcreteOdomHALTest.cpp  MonitoringTest.cpp  MotionPlannerTest.cpp  PidTest.cpp  SensorDriversTest.cpp  SensorManagerTest.cpp
Wall-A-STM/USB_DEVICE/App/: usbd_cdc_if.c  usbd_cdc_if.h
_bmad-output/brainstorming/: brainstorming-session-2026-05-09-1400.md  brainstorming-session-2026-05-13-1000.md  brainstorming-session-2026-05-14-1000.md
_bmad-output/implementation-artifacts/: 1-1-projet-stm32cubemx-configure-et-freertos-operationnel-sur-cible.md  1-2-app-config-h-et-app-interfaces-constantes-et-contrats-domaine.md  1-3-app-busformat-h-cpp-formatage-ascii-ibus-centralise.md  1-4-externalcomm-implementation-ibus-et-communication-tri-canal-ascii.md  1-5-systeminit-boot-cablage-statique-complet.md  1-6-infrastructure-google-test-mocks-hal-tests-busformat-externalcomm.md  2-1-hal-interfaces-locomotion-iencoderhal-iodomhal-imotorhal-concreteodomhal-motorhal.md  2-2-odocontrol-tache-200hz-double-pid-orthogonal-setpoint-union-condition-arrivee.md  2-3-motionplanner-tache-event-driven-mailbox-consigne-setpoint-arret-urgence.md  2-4-robustesse-odocontrol-detection-blocage-moteur-encodeur-silencieux-guard-boot.md  3-1-sensormanager-polling-isensor-max-sensors-alarmes-xtasknotify.md  3-2-actuatormanager-iactuator-max-actuators-commandbyid.md  3-3-monitoring-supervision-par-pull-sur-shared-memory-horodatee.md  3-4-drivers-concrets-isensor-et-iactuator.md  3-5-validation-integration-systeme-suite-de-tests-complete-sur-pc-host.md  deferred-work.md  sprint-status.yaml
_bmad-output/planning-artifacts/: architecture.md  epics.md  implementation-readiness-report-2026-05-10.md  prd.md
pythonTester/: README.md  app.py  config.py  data_store.py  parser.py  serial_worker.py
robot-cdr/: .cproject  README.md  Wall-A-STM.launch  nfr-check.sh
robot-cdr/App/: Config.h  cppMain.cpp
robot-cdr/App/Drivers/: UsbCdcChannel.h
robot-cdr/App/Interfaces/: IActuatorManager.h  IBus.h  IOdomHAL.h
robot-cdr/App/Services/: BusFormat.h  Odometry.cpp
robot-cdr/Core/Src/: freertos.c  (+3 more)
robot-cdr/Tests/: run_tests.sh
(+30 files in other folders)
